--- a/app/templates/stock/inventory.html
+++ b/app/templates/stock/inventory.html
@@ -98,7 +98,7 @@
                 <i class="bi bi-cloud-upload"></i> Bulk Upload
             </a>
             {% endif %}
-            <a href="{{ url_for('stock.low_stock_alerts') }}" class="btn btn-warning bg-secondary text-white btn-sm">
+            <a href="{{ url_for('stock.low_stock_alerts') }}" class="btn btn-warning btn-sm">
                 <i class="bi bi-exclamation-triangle"></i> Alerts
             </a>
         </div>
